Fix extra space in proj card

--- a/index.css
+++ b/index.css
@@ -100,7 +100,7 @@ li {
   @media screen and (min-width: 650px) {
     align-items: center;
     flex-direction: row;
-    gap: 3rem;
+    gap: 1.5rem;
     min-height: 300px;
   }
 
